--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,18 @@ spring.datasource.username=yongyong
 spring.datasource.password=ora123
 
 # JPA 설정
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+
+# Thymeleaf Template Resolver 설정
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML
+
 
 
 #Thymeleaf cache 설정
@@ -22,3 +29,5 @@ spring.thymeleaf.cache=false
 logging.level.org.springframework.web=debug
 logging.level.org.springframework.security=debug
 
+# 파일 업로드 디렉토리 설정
+upload.directory=/path/to/your/upload/directory
