--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.mode=HTML
 
+spring.web.resources.static-locations=classpath:/static/
 
 
 #Thymeleaf cache 설정
@@ -28,6 +29,9 @@ spring.thymeleaf.cache=false
 #Security Log Level
 logging.level.org.springframework.web=debug
 logging.level.org.springframework.security=debug
+
+
+
 
 # 파일 업로드 디렉토리 설정
 upload.directory=/path/to/your/upload/directory
