컬럼 사이즈 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.username=yongyong
 spring.datasource.password=ora123
 
 # JPA 설정
-#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -36,3 +36,10 @@ spring.mvc.format.date=yyyy-MM-dd
 
 # 파일 업로드 디렉토리 설정
 upload.directory=/path/to/your/upload/directory
+
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+ 	 org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+ 	 
+
