--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,14 @@
          <artifactId>querydsl-apt</artifactId>
          <version>${querydsl.version}</version>
       </dependency>
-   </dependencies>
+
+		<!-- spring-boot-starter-mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+	</dependencies>
 
    <build>
       <plugins>
