12/15 무비,tv,관리자화면 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,14 +7,14 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=yongyong
 spring.datasource.password=ora123
 
-# JPA 설정
+# JPA ì¤ì 
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 
-# Thymeleaf Template Resolver 설정
+# Thymeleaf Template Resolver ì¤ì 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
@@ -23,7 +23,7 @@ spring.thymeleaf.mode=HTML
 spring.web.resources.static-locations=classpath:/static/
 
 
-#Thymeleaf cache 설정
+#Thymeleaf cache ì¤ì 
 spring.thymeleaf.cache=false
 
 #Security Log Level
@@ -34,7 +34,7 @@ logging.level.org.springframework.security=debug
 # application.properties
 spring.mvc.format.date=yyyy-MM-dd
 
-# 파일 업로드 디렉토리 설정
+# íì¼ ìë¡ë ëë í ë¦¬ ì¤ì 
 upload.directory=/path/to/your/upload/directory
 
 logging:
@@ -42,4 +42,7 @@ logging:
     org.hibernate.SQL: DEBUG
  	 org.hibernate.type.descriptor.sql.BasicBinder: TRACE
  	 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
