관리자페이지 매핑 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,23 +7,25 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=yongyong
 spring.datasource.password=ora123
 
-# JPA ì¤ì 
+# JPA Ã¬ÂÂ¤Ã¬Â Â
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 
-# Thymeleaf Template Resolver ì¤ì 
+# Thymeleaf Template Resolver Ã¬ÂÂ¤Ã¬Â Â
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.mode=HTML
 
-spring.web.resources.static-locations=classpath:/static/
+# 기본적인 정적 리소스 위치
+spring.web.resources.static-locations=classpath:/static/,classpath:/static/admin/
 
 
-#Thymeleaf cache ì¤ì 
+
+#Thymeleaf cache Ã¬ÂÂ¤Ã¬Â Â
 spring.thymeleaf.cache=false
 
 #Security Log Level
@@ -33,7 +35,7 @@ logging.level.org.springframework.security=debug
 # application.properties
 spring.mvc.format.date=yyyy-MM-dd
 
-# íì¼ ìë¡ë ëë í ë¦¬ ì¤ì 
+# Ã­ÂÂÃ¬ÂÂ¼ Ã¬ÂÂÃ«Â¡ÂÃ«ÂÂ Ã«ÂÂÃ«Â ÂÃ­ÂÂ Ã«Â¦Â¬ Ã¬ÂÂ¤Ã¬Â Â
 upload.directory=src/main/resources/static/
 
 logging:
